--- a/melodio/music/templates/music/inc/navbar.html
+++ b/melodio/music/templates/music/inc/navbar.html
@@ -1,35 +1,47 @@
 <nav class="navbar navbar-expand-lg bg-primary fixed-top" data-bs-theme="dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">Melodio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">All Songs</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success bg-success text-white me-2" type="submit">Search</button>
-        </form>
-        <button type="button" class="btn btn-danger me-2">Signin</button>
-        <button type="button" class="btn btn-danger">Signup</button>
+  <div class="container">
+      <!-- Logo -->
+      <a class="navbar-brand" href="{% url "home" %}">Melodio</a>
+
+      <!-- Centered Navigation -->
+      <div class="d-flex justify-content-center">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url "home" %}">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url "allsongs" %}">All Songs</a>
+              </li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Categories
+                  </a>
+                  <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="{% url "genres" %}">Genres</a></li>
+                      <li><a class="dropdown-item" href="{% url "artists" %}">Artists</a></li>
+                      <li><a class="dropdown-item" href="{% url "all_albums" %}">Albums</a></li>
+                  </ul>
+              </li>
+          </ul>
       </div>
-    </div>
-  </nav>
+
+      <!-- Right-aligned Search, Signin, Signup -->
+      <div class="d-flex">
+          <form class="d-flex me-2" role="search" method="GET" action="{% url "search" %}">
+              <input name="query" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
+              <button class="btn btn-outline-success bg-success text-white" type="submit">Search</button>
+          </form>
+          {% if request.user.is_authenticated %}
+          <div class="d-flex d-block">
+            <button type="button" class="btn btn-primary me-2 fw-bold fs-5" ><i class="fa fa-user me-2"></i>{{ request.user }}</button>
+            <button type="button" class= "btn btn-warning me-2"><a class="nav-link" href="{% url "watchlater" %}">Listen later</a></button>
+            <button type="button" class= "btn btn-warning me-2"><a class="nav-link" href="{% url "uploadsong" %}">Upload Song</a></button>
+            <button type="button" class="btn btn-danger" onclick="window.location.href='{% url 'logout' %}'">Logout</button>
+          </div>
+          {% else %}
+          <button type="button" class="btn btn-danger me-2" onclick="window.location.href='{% url 'login' %}'">Signin</button>
+          <button type="button" class="btn btn-danger" onclick="window.location.href='{% url 'register' %}'">Signup</button>
+          {% endif %}
+      </div>
+  </div>
+</nav>
